--- a/css/contacto.css
+++ b/css/contacto.css
@@ -2,7 +2,7 @@
     height: 750px;
     background: #002554;
     color: #fff;
-    background: url(/images/contacto/contacto-banner.jpg) no-repeat;
+    background: url(http://127.0.0.1:5500/images/contacto/contacto-banner.jpg) no-repeat;
 }
 
 
